Adds support for arrays

--- a/test/examples/sample.toml
+++ b/test/examples/sample.toml
@@ -9,6 +9,7 @@ bio = "GitHub Cofounder & CEO\nLikes tater tots and beer."
 
 [database]
 server = "192.168.1.1"
+ports = [ "8001", "8001", "8002" ]
 connection_max = 5000
 
 [servers]
