[Docs] Adds inch

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,3 +10,6 @@ before_script:
   - mix deps.get
 script:
   - MIX_ENV=all mix test
+after_script:
+  - MIX_ENV=docs mix deps.get
+  - MIX_ENV=docs mix inch.report
